--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,11 +60,14 @@
      <Compile Include="Assets\Scripts\EnemyMaterial.cs" />
      <Compile Include="Assets\Scripts\EnemyMovement.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\GameOver.cs" />
      <Compile Include="Assets\Scripts\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\PauseScreen.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\PlayerShooting.cs" />
      <Compile Include="Assets\Scripts\Projectile.cs" />
+     <Compile Include="Assets\Scripts\Stage.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>E:/Cemetery and survival/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
